# obs-TucoFlyer

./: .gitmodules  CMakeLists.txt  README.md  bot-connector.cpp  bot-connector.h  flyer-camera-filter.c  flyer-camera-filter.cpp  flyer-camera-filter.h  flyer-vision-detector.cpp  flyer-vision-detector.h  flyer-vision-tracker.cpp  flyer-vision-tracker.h  flyer-vision.cpp  flyer-vision.h  image-grabber.cpp  image-grabber.h  json-util.h  obs-tucoflyer.c  obs-tucoflyer.cpp  overlay-drawing.cpp  overlay-drawing.h
data/: overlay.effect  scale_4x.effect
yolo/: yolo_cpp_dll.lib
